@@ -1,8 +1,32 @@
 /*
+ * Copyright (c) 2017, 2019, Oracle and/or its affiliates. All rights reserved.
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
+ *
+ * This code is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License version 2 only, as
+ * published by the Free Software Foundation.
+ *
+ * This code is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * version 2 for more details (a copy is included in the LICENSE file that
+ * accompanied this code).
+ *
+ * You should have received a copy of the GNU General Public License version
+ * 2 along with this work; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+ *
+ * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ * or visit www.oracle.com if you need additional information or have any
+ * questions.
+ */
+
+/*
  * @test
+ * @bug 8231827
  * @summary Basic tests for bindings from instanceof
- * @compile BindingsTest1.java
- * @run main BindingsTest1
+ * @compile --enable-preview -source ${jdk.version} BindingsTest1.java
+ * @run main/othervm --enable-preview BindingsTest1
  */
 
 public class BindingsTest1 {
@@ -24,24 +48,14 @@ public class BindingsTest1 {
             s.length();
             in.intValue();
         }
-        // Test for e1 && e2.F = intersect(e1.F, e2.F)
-        if (!(o1 instanceof String s) && !(o1 instanceof String s)) {
-
-        } else {
-            s.length();
-        }
 
         // test for e1&&e2 - include e1.T in e2
         if (o1 instanceof String s && s.length()>0) {
             System.out.print("done");
         }
 
-        // Test for (e1 || e2).T = intersect(e1.T, e2.T)
-        if (o1 instanceof String s || o3 instanceof String s){
-            System.out.println(s); // ?
-        }
-
         // Test for (e1 || e2).F = union(e1.F, e2.F)
+        //XXX:
         if (!(o1 instanceof String s) || !(o3 instanceof Integer in)){
         } else {
             s.length();
@@ -52,39 +66,6 @@ public class BindingsTest1 {
 
         if (!(o1 instanceof String s) || s.length()>0) {
             System.out.println("done");
-        }
-
-        // Test for (e1 ? e2 : e3).T contains intersect(e2.T, e3.T)
-        if (Ktrue() ? o2 instanceof Integer x : o2 instanceof Integer x) {
-            x.intValue();
-        }
-
-        // Test for (e1 ? e2 : e3).T contains intersect(e1.T, e3.T)
-        if (o1 instanceof String s ? true : o1 instanceof String s) {
-            s.length();
-        }
-
-        // Test for (e1 ? e2 : e3).T contains intersect(e1.F, e2.T)
-        if (!(o1 instanceof String s) ? (o1 instanceof String s) : true) {
-            s.length();
-        }
-
-        // Test for (e1 ? e2 : e3).F contains intersect(e2.F, e3.F)
-        if (Ktrue() ? !(o2 instanceof Integer x) : !(o2 instanceof Integer x)){
-        } else {
-            x.intValue();
-        }
-
-        // Test for (e1 ? e2 : e3).F contains intersect(e1.T, e3.F)
-        if (o1 instanceof String s ? true : !(o1 instanceof String s)){
-        } else {
-            s.length();
-        }
-
-        // Test for (e1 ? e2 : e3).F contains intersect(e1.F, e2.F)
-        if (!(o1 instanceof String s) ? !(o1 instanceof String s) : true){
-        } else {
-            s.length();
         }
 
         // Test for e1 ? e2: e3 - include e1.T in e2
@@ -129,15 +110,6 @@ public class BindingsTest1 {
             s.length();
         }
 
-        L3: {
-            if ((o1 instanceof String s) || (o3 instanceof String s)) {
-                s.length();
-            } else {
-                break L3;
-            }
-            s.length();
-        }
-
         L4: {
             if (!(o1 instanceof String s)) {
                 break L4;
@@ -175,6 +147,30 @@ public class BindingsTest1 {
             s.length();
         }
 
+        {
+            while (!(o1 instanceof String s)) {
+                L8: break L8;
+            }
+
+            s.length();
+        }
+
+        {
+            for ( ;!(o1 instanceof String s); ) {
+                L9: break L9;
+            }
+
+            s.length();
+        }
+
+        {
+            do {
+                L10: break L10;
+            } while (!(o1 instanceof String s));
+
+            s.length();
+        }
+
         if (o1 instanceof String s) {
             Runnable r1 = new Runnable() {
                 @Override
@@ -189,6 +185,9 @@ public class BindingsTest1 {
             r2.run();
             String s2 = s;
         }
+
+        boolean result = (o1 instanceof String a1) ? (o1 instanceof String a2) : (!(o1 instanceof String a3));
+        boolean result2 = (o1 instanceof String a1) ? (o1 instanceof String a2) : (!(switch (0) { default -> false; }));
 
         System.out.println("BindingsTest1 complete");
     }
