@@ -24,8 +24,8 @@
 /*
  * @test
  * @summary Testing pattern matching against the null constant
- * @compile NullsInPatterns.java
- * @run main NullsInPatterns
+ * @compile --enable-preview -source ${jdk.version} NullsInPatterns.java
+ * @run main/othervm --enable-preview NullsInPatterns
  */
 import java.util.List;
 
