@@ -1,7 +1,8 @@
 /*
  * @test /nodynamiccopyright/
+ * @bug 8231827
  * @summary Ensure that in type test patterns, the predicate is not trivially provable false.
- * @compile/fail/ref=PatternVariablesAreFinal.out -XDrawDiagnostics PatternVariablesAreFinal.java
+ * @compile/fail/ref=PatternVariablesAreFinal.out -XDrawDiagnostics --enable-preview -source ${jdk.version} PatternVariablesAreFinal.java
  */
 public class PatternVariablesAreFinal {
     public static void main(String[] args) {
